<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".Rejoindre">

    <Button
        android:id="@+id/rejoindre"
        android:layout_width="257dp"
        android:layout_height="62dp"
        android:background="@drawable/button_rounded_green"
        android:fontFamily="@font/anton"
        android:text="@string/rejoindre_une_partie"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.771" />

    <TextView
        android:id="@+id/numpartieinstruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/assistant_medium"
        android:gravity="center"
        android:text="@string/entrez_le_num_ro_de_partie"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.462" />

    <TextView
        android:id="@+id/pseudoinstruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/assistant_medium"
        android:gravity="center"
        android:text="@string/pseudo"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.201" />

    <TextView
        android:id="@+id/contraintecaractererej"
        android:layout_width="392dp"
        android:layout_height="37dp"
        android:fontFamily="@font/assistant_medium"
        android:gravity="center"
        android:text="@string/lettres_et_chiffres_uniquement_pas_de_caract_res_sp_ciaux"
        android:textColor="#6E6C6C"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.239" />

    <EditText
        android:id="@+id/num_partie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:fontFamily="@font/assistant_medium"
        android:inputType="number"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numpartieinstruction"
        app:layout_constraintVertical_bias="0.039" />

    <EditText
        android:id="@+id/nicknamerejoindre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:fontFamily="@font/assistant_medium"
        android:gravity="center_horizontal"
        android:hint="@string/funkybaby99"
        android:inputType="text"
        android:textColor="#FFFFFF"
        android:textColorHint="#514F4F"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pseudoinstruction"
        app:layout_constraintVertical_bias="0.098" />
</androidx.constraintlayout.widget.ConstraintLayout>